--- a/style.css
+++ b/style.css
@@ -107,3 +107,52 @@ p{
     color: white;
     font-size: 1.3rem;
 }
+.contentBox h1{
+    font-weight: 800;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 5rem;
+} 
+.contentBox p{
+    color: white;
+    font-size: 1.3rem;
+}
+.sec1{
+    padding: 100px 0;
+    background: #000;
+}
+.headerText{
+    color: #fff;
+}
+.headerText h2{
+    font-size: 2.5rem;
+    color:#fff;
+    margin-bottom: 20px;
+}
+.placeBox{
+    position:relative;
+    max-width: 300px;
+    height: 400px;
+    margin: 0 auto;
+    background: #000;
+    margin-top: 30px;
+}
+.placeBox .imgBx{
+    width: 100%;
+    height: 100%;
+}
+.placeBox .imgBx img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.placeBox .content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: baseline;
+    align-items: flex-end;
+}
