--- a/style.css
+++ b/style.css
@@ -157,3 +157,103 @@ p{
     justify-content: baseline;
     align-items: flex-end;
 }
+/* 3 */
+.blogpost{
+    position: relative;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    background: #fff;
+    
+}
+.blogpost .imgBx{
+    height: 400px;
+}
+.blogpost .imgBx img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.blogpost .content{
+    padding: 15px;
+}
+.blogpost .content h1{
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+.btnD2,
+.btnD2:hover{
+    background: #262626;
+    color: #fff;
+    border-radius: 30px;
+    padding: 10px 20px;
+    float: right;
+}
+.contact{
+    position: relative;
+    padding: 100px 0;
+    background: url(../img/contactbg.jpg);
+    background-size: cover;
+    min-height: 100vh;
+}
+.contact form{
+    position: relative;
+    z-index: 1000;
+}
+.contact .form-control{
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid rgba(255, 255, 255,.2);
+    height: 50px;
+    border-radius:0;
+    background:rgba(0,0,0,.6);
+    color: #fff;
+    font-size: 1.25rem;
+}
+.contact .form-control:focus,
+.contact .form-control:hover{
+    border: none;
+    border-bottom: 2px solid rgba(255, 255, 255, 1);
+    box-shadow: none;
+}
+.contact .textarea{
+    min-height: 100px;
+}
+.contact label{
+    color: white;
+    font-size: 1.5rem;
+}
+footer{
+    background: #000;
+    padding: 50px 0 0;
+}
+.sci{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sci li{
+    list-style: none;
+    margin: 0 20px;
+}
+.sci li a{
+    color: #777;
+    font-size: 2em;
+    transition: 0.5s;
+}
+.sci li a:hover{
+    color: white;
+}
+.cpryt{
+    text-align: center;
+    color: #777;
+    margin-top: 20px;
+}
+.cpryt a,
+.cpryt a:hover{
+    color: #fff;
+}
