--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ p{
     top: 0;
     width: 100%;
     height: 100vh;
-    background: url(../img/bannerbg.jpg);
+    background: url(img/bannerbg.jpg);
     background-size: cover;
     margin-bottom: 0;
 }
@@ -157,6 +157,49 @@ p{
     justify-content: baseline;
     align-items: flex-end;
 }
+.placeBox .content h3{
+    position: relative;
+    margin: 0;
+    padding: 10px;
+    background: rgba(0, 0, 0,.95);
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    width: 100%;
+    text-align: center;
+}
+.placeBox .content h3 span{
+    font-size:16px;
+    font-weight: 500;
+}
+.sec2{
+    position: relative;
+    background: url(img/banner2.jpg);
+    background-size: cover;
+    height: 100vh;
+}
+.sec2 h2{
+    font-weight: 800;
+    color: #fff;
+    text-transform:uppercase;
+    font-size: 4.5rem;
+}
+.btnD1{
+    border: 2px solid #fff;
+    color: #000;
+    background: #fff;
+    border-radius: 50px;
+    padding: 15px 50px;
+    font-size: 1.15rem;
+    outline: none;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.blog{
+    position: relative;
+    width: 100px 0;
+    background: #000;
+}
 /* 3 */
 .blogpost{
     position: relative;
@@ -194,7 +237,7 @@ p{
 .contact{
     position: relative;
     padding: 100px 0;
-    background: url(../img/contactbg.jpg);
+    background: url(img/contactbg.jpg);
     background-size: cover;
     min-height: 100vh;
 }
